--- a/bricks.scss
+++ b/bricks.scss
@@ -1,14 +1,6 @@
 .tile {
-  // &:nth-child(3) {
-  //   transition: translate3d 1s;
-  // }
   transition: translate3d 0.4s;
-}
 
-// @for $i from 1 to 100 {
-//   .tile:nth-child(#{$i}) {
-//     -webkit-transition-delay: 0.2s * $i;
-//     transition-delay: 0.1s * $i;
-//   }
-// }
-  
+  width: 300px;
+  height: 450px;
+}
