--- a/src/elo-service/style/_layout.scss
+++ b/src/elo-service/style/_layout.scss
@@ -8,7 +8,18 @@ $sidebar-width: 20em;
 $input-width: 20em;
 $input-margin: 1em;
 
+// .sidebar {
+//   position: absolute;
+//   height: 100%;
+//   display: block;
+//   // margin-left: - $sidebar-width / 2;
+// }
+
 .titlebar {
+  flex: 1;
+  // margin-left: -20px;
+  // position: absolute;
+  display: inline-block;
   height: 100%;
   padding: 0;
   margin: 0;
@@ -25,10 +36,10 @@ div {
 //   width: $sidebar-width;
 // }
 
-.title.menu-item {
+.title {
   // width: $sidebar-width;
   // height: 3em;  
-  display: inline;
+  display: block;
   margin-left: 1em;
   margin-top: 0.6em;
   margin-bottom: 0.6em;
@@ -71,11 +82,16 @@ div {
 }
 
 .content {
-  display: inline-block;
-  height: 100%;
+  flex: 1;
+  // margin-left: $sidebar-width;
+  // position: absolute;
+  // display: inline-block;
+  height: 100vh;
+  overflow-y: scroll;
 }
 
 .container {
+  flex-direction: column;
   position: flex;
   align-items: flex-top;
 }
